AAP-14300 corrected the working for the restore setction

--- a/downstream/modules/platform/proc-aap-controller-restore.adoc
+++ b/downstream/modules/platform/proc-aap-controller-restore.adoc
@@ -47,5 +47,5 @@ A new deployment is created and your backup is restored to it. This can take app
 +
 [NOTE]
 ====
-If *Successful* is `False`, the backup has failed. Check the automation controller operator logs for the error to fix the issue.
+If *Successful* is `False`, the recovery has failed. Check the automation controller operator logs for the error to fix the issue.
 ====
