Updated a few Hub and EDA topics to test out new attributes

--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -141,14 +141,15 @@
 :MenuAC: Automation Content
 
 :MenuTopAE: From the {MenuAE} menu on the navigation panel, select
-:MenuTopAC: From the {MenuAC} menu on the navigation panel, select 
+:MenuTopAC: From the {MenuAC} menu on the navigation panel, select
 
 // Automation Execution (aka automation controller menu items)
-:MenuAEJobs: menu:{MenuTopAE}[Jobs]
-:MenuAETemplates: menu:{MenuTopAE}[Templates]
-:MenuAESchedules: menu:{MenuTopAE}[Schedules]
+:MenuAEJobs: menu:{MenuAE}[Jobs]
+:MenuAETemplates: menu:{MenuAE}[Templates]
+:MenuAESchedules: menu:{MenuAE}[Schedules]
 
 // Automation Execution > Infrastructure
+// first add attribute for MenuTopAE, for example {MenuTopAE} {MenuACInfrastructureTopology}.
 :MenuInfrastructureTopology: menu:Infrastructure[Topology View]
 :MenuInfrastructureInventories: menu:Infrastructure[Inventories]
 :MenuInfrastructureHosts: menu:Infrastructure[Hosts]
@@ -157,6 +158,7 @@
 :MenuInfrastructureExecEnvironments: menu:Infrastructure[Execution Environments]
 
 // Automation Execution > Administration
+// first add attribute for MenuTopAE, for example {MenuTopAE} {MenuAEAdminSettings}.
 :MenuAEAdminActivityStream: menu:Administration[Activity Stream]
 :MenuAEAdminWorkflowApprovals: menu:Administration[Workflow Approvals]
 :MenuAEAdminJobNotifications: menu:Administration[Job Notifications]
@@ -171,11 +173,12 @@
 :MenuADDecisionEnvironments: menu:Automation Decisions[Decision Environments]
 
 // Automation Content (aka automation hub menu selections)
-:MenuACNamespaces: menu:{MenuTopAC}[Namespaces]
-:MenuACCollections: menu:{MenuTopAC}[Collections]
-:MenuACExecEnvironments: menu:{MenuTopAC}[Execution Environments]
+:MenuACNamespaces: menu:{MenuAC}[Namespaces]
+:MenuACCollections: menu:{MenuAC}[Collections]
+:MenuACExecEnvironments: menu:{MenuAC}[Execution Environments]
 
 // Automation Content > Administration
+// first add attribute for MenuTopAC, for example {MenuTopAC} {MenuACAdminRemotes}.
 :MenuACAdminSignatureKeys: menu:Administration[Signature Keys]
 :MenuACAdminRepositories: menu:Administration[Repositories]
 :MenuACAdminRemoteRegistries: menu:Administration[Remote Registries]
@@ -196,11 +199,14 @@
 :MenuAAHostSubscriptionUse: menu:Automation Analytics[Subscription Usage]
 
 // Access Management menu selections
+// First include attribute
 :MenuAMAuthentication: menu:Access Management[Authentication]
 :MenuAMOrganizations: menu:Access Management[Organizations]
 :MenuAMTeams: menu:Access Management[Teams]
 :MenuAMUsers: menu:Access Management[Users]
 :MenuAMRoles: menu:Access Management[Roles]
+:MenuAMCredentials: menu:Access Management[Credentials]
+:MenuAMCredentialType: menu:Access Management[Credential Types]
 
 
 // Ansible Lightspeed menu selections
