--- a/downstream/modules/eda/proc-eda-set-up-new-decision-environment.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-new-decision-environment.adoc
@@ -12,9 +12,9 @@ For more information, see the xref:eda-set-up-credential[Setting up credentials]
 * You have pushed a decision environment image to an image repository or you chose to use the image `de-supported` provided at link:http://registry.redhat.io/[registry.redhat.io].
 
 .Procedure
-
+// ddacosta I'm not sure whether there will be an EDA specific dashboard in the gateway. Step 1 might need to change to something like "Log in to AAP".
 . Navigate to the {EDAcontroller} Dashboard.
-. From the navigation panel, select {menu_decision-environments}.
+. From the navigation panel, select {MenuADDecisionEnvironments}.
 . Insert the following:
 +
 Name:: Insert the name.
