--- a/downstream/modules/eda/proc-eda-set-up-new-project.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-new-project.adoc
@@ -10,9 +10,9 @@ For more information, see the xref:eda-set-up-credential[Setting up credentials]
 * You have an existing repository containing rulebooks that are integrated with playbooks contained in a repository to be used by {ControllerName}.
 
 .Procedure
-
+// ddacosta I'm not sure whether there will be an EDA specific dashboard in the gateway. Step 1 might need to change to something like "Log in to AAP".
 . Log in to the {EDAcontroller} Dashboard.
-. From the navigation panel, select {menu_eda-projects}.
+. From the navigation panel, select {MenuADProjects}.
 . Insert the following:
 +
 Name:: Enter project name.
