--- a/downstream/modules/eda/proc-eda-view-rule-audit-events.adoc
+++ b/downstream/modules/eda/proc-eda-view-rule-audit-events.adoc
@@ -4,7 +4,7 @@
 
 .Procedure
 
-. From the navigation panel select {menu_rule-audit}.
+. From the navigation panel, select {MenuRuleAudit}.
 . Select the desired rule, this brings you to the *Details* tab. To view all the events that triggered an action, select the *Events* tab.
 This shows you the event that triggered actions.
 . Select an event to view the *Event log*, along with the *Source type* and *Timestamp*.
