--- a/downstream/modules/hub/proc-downloading-signature-public-keys.adoc
+++ b/downstream/modules/hub/proc-downloading-signature-public-keys.adoc
@@ -9,9 +9,9 @@ You must download the public key before you add it to the local system keyring.
 
 .Procedure
 
-. Log in to your {PrivateHubName} instance in the {HubName} UI.
+. Log in to your {PlatformNameShort}.
 
-. In the navigation panel, select menu:Signature Keys[].
+. {MenuACTop} {MenuACAdminSignatureKeys}.
 The Signature Keys dashboard displays a list of multiple keys: collections and container images.
 
 * To verify collections, download the key prefixed with `collections-`.
