--- a/downstream/modules/hub/proc-using-content-signing-services-in-pah.adoc
+++ b/downstream/modules/hub/proc-using-content-signing-services-in-pah.adoc
@@ -14,9 +14,8 @@ You can use content signing on {PrivateHubName} in the following scenarios:
 
 .Procedure
 
-. Log in to your {PrivateHubName} instance in the {HubName} UI.
-
-. From the navigation panel, select menu:Collections[Approval].
+. Log in to your {PlatformNameShort}.
+. {MenuTopAC} {MenuACAdminCollectionApproval}.
 The Approval dashboard opens and displays a list of collections.
 
 . Click btn:[Sign and approve] for each collection that you want to sign.
