Formatting menus in EDA and Hub with new attributes

--- a/downstream/modules/eda/proc-eda-set-up-new-project.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-new-project.adoc
@@ -12,7 +12,7 @@ For more information, see the xref:eda-set-up-credential[Setting up credentials]
 .Procedure
 // ddacosta I'm not sure whether there will be an EDA specific dashboard in the gateway. Step 1 might need to change to something like "Log in to AAP".
 . Log in to the {EDAcontroller} Dashboard.
-. From the navigation panel, select {MenuADProjects}.
+. From the navigation panel, select *{MenuADProjects}*.
 . Insert the following:
 +
 Name:: Enter project name.
