--- a/downstream/modules/eda/proc-eda-view-rule-audit-actions.adoc
+++ b/downstream/modules/eda/proc-eda-view-rule-audit-actions.adoc
@@ -4,7 +4,7 @@
 
 .Procedure
 
-. From the navigation panel select {MenuADRuleAudit}.
+. From the navigation panel select *{MenuADRuleAudit}*.
 . Select the desired rule, this brings you to the *Actions* tab.
 
 From here you can view executed actions that were taken.
