--- a/downstream/modules/hub/proc-approve-collection.adoc
+++ b/downstream/modules/hub/proc-approve-collection.adoc
@@ -12,7 +12,7 @@ You can approve collections uploaded to individual namespaces for internal publi
 
 .Procedure
 
-. {MenuTopAE} {MenuACAdminCollectionApproval}.
+. {MenuTopAE} *{MenuACAdminCollectionApproval}*.
 Collections requiring approval have the status *Needs review*.
 . Select a collection to review.
 . Click the *Version* to view the contents of the collection.
