--- a/downstream/modules/hub/proc-downloading-signature-public-keys.adoc
+++ b/downstream/modules/hub/proc-downloading-signature-public-keys.adoc
@@ -11,7 +11,7 @@ You must download the public key before you add it to the local system keyring.
 
 . Log in to your {PlatformNameShort}.
 
-. {MenuACTop} {MenuACAdminSignatureKeys}.
+. {MenuTopAC} *{MenuACAdminSignatureKeys}*.
 The Signature Keys dashboard displays a list of multiple keys: collections and container images.
 
 * To verify collections, download the key prefixed with `collections-`.
