--- a/downstream/modules/hub/proc-set-community-remote.adoc
+++ b/downstream/modules/hub/proc-set-community-remote.adoc
@@ -24,7 +24,7 @@ collections:
 
 .Procedure
 . Log in to {PlatformNameShort}.
-. {MenuACTop} {MenuACAdminRemotes}.
+. {MenuTopAC} *{MenuACAdminRemotes}*.
 . In the *Community* remote, click the btn:[More Actions] icon *{MoreActionsIcon}* and select *Edit*.
 . In the *YAML requirements* field, click btn:[Browse] and locate the `requirements.yml` file on your local machine.
 . Click btn:[Save].
