--- a/downstream/modules/hub/proc-using-content-signing-services-in-pah.adoc
+++ b/downstream/modules/hub/proc-using-content-signing-services-in-pah.adoc
@@ -15,7 +15,7 @@ You can use content signing on {PrivateHubName} in the following scenarios:
 .Procedure
 
 . Log in to your {PlatformNameShort}.
-. {MenuTopAC} {MenuACAdminCollectionApproval}.
+. {MenuTopAC} *{MenuACAdminCollectionApproval}*.
 The Approval dashboard opens and displays a list of collections.
 
 . Click btn:[Sign and approve] for each collection that you want to sign.
