--- a/downstream/assemblies/playbooks/assembly-intro-to-playbooks.adoc
+++ b/downstream/assemblies/playbooks/assembly-intro-to-playbooks.adoc
@@ -12,5 +12,10 @@ Playbooks, and the conditions, variables, and tasks within them, can be saved, s
 This makes it easier for you to codify operational knowledge and ensure that the same actions are performed consistently.
 
 include::playbooks/ref-how-do-playbooks-work.adoc[leveloffset=+1]
-include::playbooks/ref-how-to-use-ansible-playbooks.adoc[leveloffset=+1
-]
+include::playbooks/ref-how-to-use-ansible-playbooks.adoc[leveloffset=+1]
+include::playbooks/proc-starting-automation.adoc[leveloffset=+1]
+include::playbooks/proc-build-an-inventory.adoc[leveloffset=+1]
+include::playbooks/ref-use-meta-groups.adoc[leveloffset=+2]
+include::playbooks/ref-create-variables.adoc[leveloffset=+1]
+include::playbooks/proc-creating-a-playbook.adoc[leveloffset=+1]
+
