--- a/downstream/modules/hub/proc-configuring-the-client-to-verify-signatures.adoc
+++ b/downstream/modules/hub/proc-configuring-the-client-to-verify-signatures.adoc
@@ -3,7 +3,7 @@
 
 = Configuring the client to verify signatures
 
-In order to ensure a container image pulled from the remote registry is properly signed, you must first configure the image with the proper public key in a policy file. 
+To ensure a container image pulled from the remote registry is properly signed, you must first configure the image with the proper public key in a policy file. 
 
 .Prerequisites
 * The client must have sudo privileges configured to verify signatures.
@@ -75,7 +75,7 @@ name of your key file.
 > podman pull <server-address>/<container-name>:<tag name> --tls-verify=false
 ----
 
-This response verifies the image has been signed with no errors. If the image is not signed, the command will fail.
+This response verifies the image has been signed with no errors. If the image is not signed, the command fails.
 
 .Additional resources
 * For more information about policy.json, see link:https://github.com/containers/image/blob/main/docs/containers-policy.json.5.md#signedby[documentation for containers-policy.json]. 
