--- a/downstream/modules/hub/proc-deploying-your-system-for-container-signing.adoc
+++ b/downstream/modules/hub/proc-deploying-your-system-for-container-signing.adoc
@@ -9,7 +9,7 @@ To deploy your system so that it is ready for container signing, create a signin
 
 [NOTE]
 ==== 
-Installer will look for the script and key on the same server where installer is located.
+Installer looks for the script and key on the same server where installer is located.
 ====
 
 .Procedure
