--- a/downstream/modules/hub/proc-pushing-container-images-from-your-local.adoc
+++ b/downstream/modules/hub/proc-pushing-container-images-from-your-local.adoc
@@ -40,7 +40,7 @@ If the image is not signed, it can only be pushed with any current signature emb
 
 .Troubleshooting
 
-The details page in {HubName} will indicate whether or not an image has been signed. If the details page indicates that an image is *Unsigned*, you can sign the image from {HubName}  using the following steps: 				
+The details page in {HubName} indicates whether or not an image has been signed. If the details page indicates that an image is *Unsigned*, you can sign the image from {HubName}  using the following steps: 				
 
 . Click the image name to navigate to the details page.
 
