--- a/downstream/modules/automation-hub/proc-deploying-your-system-for-container-signing.adoc
+++ b/downstream/modules/automation-hub/proc-deploying-your-system-for-container-signing.adoc
@@ -3,28 +3,69 @@
 
 = Deploying your system for container signing
 
-Execution Environments are container images used by Ansible {ControllerName} to run jobs. This content can be downloaded to the private automation hub, and published within your organization.
+{HubNameStart} implements image signing to provide better security for the execution environment container images.
 
-{HubNameStart} is now implementing image signing so the user can rely on better security for the EE container images.
+To deploy your system so that it is ready for container signing, create a signing script.
 
-As an {PlatformNameShort} user, you can now confirm if an EE/Container is already signed, or how to use the proper tools to sign and verify the signature yourself. This section details how to deploy your system so it is ready for container signing.
-
+[NOTE]
+==== 
+Installer looks for the script and key on the same server where installer is located.
+====
 
 .Procedure
-. Deploy your system with support for container signing activated.
+. From a terminal, create create a signing script, and pass the script path as an installer parameter.
++
+*Example*:
++
+-----
+#!/usr/bin/env bash
 
-    _automation_hub:
-        automationhub_create_default_container_signing_service: true
-        automationhub_container_signing_service_key: _path/to/gpg.key_
-        automationhub_container_signing_service_script: _path/to/executable_
+# pulp_container SigningService will pass the next 4 variables to the script.
+MANIFEST_PATH=$1
+FINGERPRINT="$PULP_SIGNING_KEY_FINGERPRINT"
+IMAGE_REFERENCE="$REFERENCE"
+SIGNATURE_PATH="$SIG_PATH"
 
+# Create container signature using skopeo
+skopeo standalone-sign \
+  $MANIFEST_PATH \
+  $IMAGE_REFERENCE \
+  $FINGERPRINT \
+  --output $SIGNATURE_PATH
 
-. Navigate to automation hub.
+# Optionally pass the passphrase to the key if password protected.
+# --passphrase-file /path/to/key_password.txt
 
-. In the navigation pane, select menu:Signature Keys[].
+# Check the exit status
+STATUS=$?
+if [ $STATUS -eq 0 ]; then
+  echo {\"signature_path\": \"$SIGNATURE_PATH\"}
+else
+  exit $STATUS
+fi
+-----
++
+. Review the {PlatformNameShort} installer inventory file for options for container signing that begin with `automationhub_*`. 
++
+-----
+[all:vars]
+.
+.
+.
 
-. Ensure you have a key titled *container-default*, or *container*-_anyname_.
+automationhub_create_default_container_signing_service = True
+automationhub_container_signing_service_key = /absolute/path/to/key/to/sign
+automationhub_container_signing_service_script = /absolute/path/to/script/that/signs
+-----
++
+. Once installation is complete, navigate to your {HubName}.
 
-NOTE: The 'container-default' service is created by the {PlatformNameShort} installer.
+. From the navigation panel, select menu:Signature Keys[].
 
+. Ensure that you have a key titled *container-default*, or *container*-_anyname_.
+
+[NOTE]
+==== 
+The `container-default` service is created by the {PlatformNameShort} installer.
+====
 
