--- a/lightspeed/modules/proc_manually-scan-repo.adoc
+++ b/lightspeed/modules/proc_manually-scan-repo.adoc
@@ -16,7 +16,7 @@ Following are the avoid duplicate conditions:
 .Procedure
 
 . In GitHub, go to the main page of the repository that you want to scan.
-. Click the *Settings* icon.
+. To modify the repository settings, click the *Settings* icon beside the *About* area. 
 . In the *Topics* field, enter the keyword topic *ansible-code-bot-scan* to the repository. 
 +
 The following illustration shows the keyword topic for starting a manual scan:
