Create Playbooks GS guide
Added modules and an image

Create Getting Started with Ansible Playbooks Guide

https://issues.redhat.com/browse/AAP-18980

--- a/downstream/modules/playbooks/ref-how-do-playbooks-work.adoc
+++ b/downstream/modules/playbooks/ref-how-do-playbooks-work.adoc
@@ -33,5 +33,5 @@ There are thousands of Ansible modules that perform all kinds of IT tasks, such 
 * Configuration management
 * Communication
 
-//image
+image:playbook.png[Structure of a typical playbook]
 
