--- a/downstream/titles/playbooks/playbooks-getting-started/master.adoc
+++ b/downstream/titles/playbooks/playbooks-getting-started/master.adoc
@@ -19,5 +19,6 @@ include::{DocumentationFeedback}[leveloffset=+1]
 
 //include::playbooks/assembly-playbook-gs.adoc[leveloffset=+1]
 include::playbooks/assembly-intro-to-playbooks.adoc[leveloffset=+1]
+include::playbooks/assembly-networking-playbook.adoc[leveloffset=+1]
 
 
