Consolidated inventory file examples
Corrections

Install Guide Scenario Consolidation

https://issues.redhat.com/browse/AAP-18700

--- a/downstream/modules/platform/ref-single-controller-hub-eda-with-managed-db.adoc
+++ b/downstream/modules/platform/ref-single-controller-hub-eda-with-managed-db.adoc
@@ -23,7 +23,7 @@ controller.example.com
 automationhub.example.com
 
 [automationedacontroller]
-automationedacontroller.example.com ansible_connection=local
+automationedacontroller.example.com
 
 [database]
 data.example.com
