--- a/downstream/modules/platform/con-install-scenario-examples.adoc
+++ b/downstream/modules/platform/con-install-scenario-examples.adoc
@@ -4,5 +4,5 @@
 
 
 [role="_abstract"]
-Red Hat supports several installation scenarios for {PlatformNameShort}. Review the following examples and select the example suitable for your preferred installation scenario.
+Red Hat supports several installation scenarios for {PlatformNameShort}. You can develop your own inventory files using the example files as a basis, or you can use the example closest to your preferred installation scenario.
  
