--- a/downstream/modules/platform/ref-standalone-controller-hub-ext-database-inventory.adoc
+++ b/downstream/modules/platform/ref-standalone-controller-hub-ext-database-inventory.adoc
@@ -1,4 +1,4 @@
-[id="ref-standalone-controller-hub-ext-database-inventory_{context}"]
+[id="ref-standalone-controller-hub-ext-database-inventory"]
 
 = Single {ControllerName and single {HubName} with external (installer managed) database
 
