--- a/downstream/assemblies/platform/assembly-platform-install-scenario.adoc
+++ b/downstream/assemblies/platform/assembly-platform-install-scenario.adoc
@@ -23,11 +23,11 @@ There are several supported installation scenarios for {PlatformName}. To instal
 //* xref:ref-example-platform-ext-database-customer-provided_platform-install-scenario[{PlatformNameShort} with an external (customer provided) database]
 //* xref:ref-single-eda-controller-with-internal-db_platform-install-scenario[Single {EDAcontroller} node with internal database]
 //* xref:ref-standlone-hub-inventory_platform-install-scenario[Standalone {HubName} with internal database]
-* xref:ref-standlone-controller-hub-ext-database-inventory[Single {HubName} with external (installer managed) database]
+* xref:ref-single-controller-hub-ext-database-inventory[Single {ControllerName} with external (installer managed) database]
 //[ifowler] Removed for AAP-18700 Install Guide Scenario Consolidation  
 //* xref:ref-standalone-hub-ext-database-customer-provided_platform-install-scenario[Single {HubName} with external (customer provided) database]
 // xref:ref-ldap-config-on-pah_platform-install-scenario[LDAP configuration on {PrivateHubName}]
-* xref:ref-single-controller-hub-eda-with-managed-db[]
+* xref:ref-single-controller-hub-eda-with-managed-db[Single {ControllerName}, single {HubName}, and single event-driven ansible controller node with external (installer managed ) database]
 
 
 include::platform/proc-editing-inventory-file.adoc[leveloffset=+1]
