Create Playbooks GS guide
Added assembly and module

Create Getting Started with Ansible Playbooks Guide

https://issues.redhat.com/browse/AAP-18980

--- a/downstream/titles/playbooks/playbooks-getting-started/master.adoc
+++ b/downstream/titles/playbooks/playbooks-getting-started/master.adoc
@@ -20,5 +20,7 @@ include::{DocumentationFeedback}[leveloffset=+1]
 //include::playbooks/assembly-playbook-gs.adoc[leveloffset=+1]
 include::playbooks/assembly-intro-to-playbooks.adoc[leveloffset=+1]
 include::playbooks/assembly-networking-playbook.adoc[leveloffset=+1]
+include::playbooks/assembly-playbook-practical-example.adoc[leveloffset=+1]
+
 
 
