--- a/downstream/modules/playbooks/ref-gathering-facts.adoc
+++ b/downstream/modules/playbooks/ref-gathering-facts.adoc
@@ -53,6 +53,7 @@ The playbook returns the following interface facts:
 
 [NOTE]
 ====
-This returns a subset of what is returned by setting `gather_subset: interfaces`.
+`gather_network_resources` renders configuration data as facts for all supported resources (`interfaces/bgp/ospf/etc``), whereas `gather_subset` is primarily used to fetch operational data.
+====
 
 You can store these facts and use them directly in another task, such as with the link:https://docs.ansible.com/ansible/latest/collections/arista/eos/eos_interfaces_module.html#ansible-collections-arista-eos-eos-interfaces-module[`eos_interfaces`] resource module.
